# SofwEng2025

./: .bash_history  .gitignore  CMakeLists.txt  Dockerfile  README.md  hello.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: HelloProjConfig.cmake.in
mains/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt  message.cpp
tests/: CMakeLists.txt  test_hello.cpp  test_version.cpp
